--- a/chatlib/build.gradle
+++ b/chatlib/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "maven"
 
-group 'io.mrarm'
-version '1.0-SNAPSHOT'
+group 'com.github.mcmrarm'
+version 'master-SNAPSHOT'
 
 apply plugin: 'java'
 
